--- a/src/styles/InputBox.module.css
+++ b/src/styles/InputBox.module.css
@@ -18,7 +18,8 @@
   border-radius: 6px;
   padding: 2rem;
   max-width: 50vw;
-  max-height: 30vh;
+
+  min-height: 240px;
   position: relative;
   display: flex;
   flex-direction: column;
